--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "scripts": {
-    "dev": "npm run server:dev",
-    "prod": "npm run lint && npm run build && npm run server:prod",
+    "dev": "vite dev",
+    "prod": "pnpm run lint && npm run build && npm run server:prod",
     "build": "vite build",
     "server": "node --loader ts-node/esm ./server/index.ts",
-    "server:dev": "npm run server",
+    "server:dev": "pnpm run server",
     "server:prod": "cross-env NODE_ENV=production npm run server",
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sirv": "^2.0.3",
+    "ts-node": "^10.9.1"
+  },
+  "type": "module",
+  "devDependencies": {
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
@@ -17,21 +28,17 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "compression": "^1.7.4",
-    "cross-env": "^7.0.3",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sirv": "^2.0.3",
-    "ts-node": "^10.9.1",
+    "postcss": "^8.4.49",
+    "sass": "^1.82.0",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.4.0",
     "vike": "^0.4.206",
     "vite": "^5.4.0"
-  },
-  "type": "module"
+  }
 }
