--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5.4.0",
     "vike": "^0.4.206",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
