--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "lucide-react": "^0.468.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.6",
     "sirv": "^2.0.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zustand": "^5.0.2"
   },
   "type": "module",
   "devDependencies": {
