--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^10.0.6",
     "sirv": "^2.0.3",
     "ts-node": "^10.9.1",
+    "workbox-window": "^7.3.0",
     "zustand": "^5.0.2"
   },
   "type": "module",
