--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
     "target": "ES2020",
     // Doesn't apply to server/, see ts-node config down below and server/tsconfig.json
     "moduleResolution": "Bundler",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext",
+      "dom"
+    ],
     "types": ["vite/client"],
     "jsx": "react-jsx",
     "skipLibCheck": true,
