--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "cropperjs": "^1.6.2",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "lucide-react": "^0.468.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.6",
     "sirv": "^2.0.3",
