--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "^18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
+    "react-svg": "^16.2.0",
     "react-toastify": "^10.0.6",
     "sirv": "^2.0.3",
     "ts-node": "^10.9.1",
+    "ts-pattern": "^5.6.0",
     "workbox-window": "^7.3.0",
     "zustand": "^5.0.2"
   },
