--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,15 @@
-# example netlify.toml
 [build]
 command = "pnpm run build"
 functions = "netlify/functions"
 publish = "dist/client"
+
+[[headers]]
+for = "/manifest.webmanifest"
+[headers.values]
+Content-Type = "application/manifest+json"
+Cache-Control = "max-age=0, no-cache, no-store, must-revalidate"
+Pragma = "no-cache"
+Expires = "0"
 
 ## Uncomment to use this redirect for Single Page Applications like create-react-app.
 ## Not needed for static site generators.
