--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cropperjs": "^1.6.2",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "firebase": "^11.1.0",
     "lucide-react": "^0.468.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
