--- a/netlify.toml
+++ b/netlify.toml
@@ -5,11 +5,11 @@ publish = "dist/client"
 
 ## Uncomment to use this redirect for Single Page Applications like create-react-app.
 ## Not needed for static site generators.
-[[redirects]]
-from = "/*"
-to = "/:splat/"
-status = 301
-force = true
+#[[redirects]]
+#from = "/*"
+#to = "/:splat/"
+#status = 301
+#force = true
 
 ## (optional) Settings for Netlify Dev
 ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
